# calculator_in_cpp

./: Button.cpp  Button.h  CMakeLists.txt  Calculations.cpp  Calculations.h  Calculator.cpp  Calculator.h  Constants.h  DecimalButton.cpp  DecimalButton.h  EqualButton.cpp  EqualButton.h  NumberButton.cpp  NumberButton.h  OperatorButton.cpp  OperatorButton.h  Screen.cpp  Screen.h  main.cpp
